feat:added newScrapper to sentiment analysis

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "input":
     {
-        "company": ["Microsoft", "Google"],
+        "company": ["IRFC", "IRCTC"],
         "keyword": ["Stocks"],
-        "PageNo" : 4
+        "PageNo" : 5
     }
     
 }
